Dodana cijela struktura backenda za prikaz kosarice, narudzbi koje su pristigle trgovini i korisnikovih proslih narudzbi, promijenjen racun entitet u bazi